css/main.css
html {
  font-family: Lato, sans-serif;
  background-color: #f2f2f2;
}

.masthead {
  background-color: #2f2f2f;
  border: 3px solid #2f2f2f;
  background-size: 64px auto;
}

.logo {
  text-align: center;
  color: #fff;
}

.logo:hover {
  color: #f05b5e;
  text-shadow: 1px 1px 25px #f05b5e;
}

.nav {
  text-align: center;
  transition: all 250ms ease;
}

.nav a {
  text-decoration: none;
  color: #fff;
  transition: all 250ms ease;
}

.nav a:hover {
  color: #f05b5e;
  text-shadow: 1px 1px 25px #f05b5e;
}

.banner {
  background-image: linear-gradient(rgba(47, 47, 47, 0), rgba(47, 47, 47, 0), rgba(47, 47, 47, .8)), url("../images/placeholder-3by2.svg");
  background-size: cover;
  background-position: center bottom;
  border-bottom: 3px solid #f2f2f2;
}

.banner-content {
  color: #fff;
  padding-top: 300px;
  background-position: left center;
  background-repeat: no-repeat;
  background-size: 100px auto;
}

@media only screen and (min-width: 60em) {

  .logo {
    text-align: left;
  }

  .nav {
    text-align: right;
  }

}

/*Footer*/

.footer {
  background-color: #2f2f2f;
  color: #fff;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
}

.move:hover {
  transform: translate(0, -.5em);
  transition: all 250ms ease;
}

.img-flex {
  display: block;
  width: 100%;
}

.card {
  overflow: hidden;
}

.contact {
  text-decoration: none;
  color: #f05b5e;
}

.contact:hover {
  color: #f05b5e;
  text-shadow: 1px 1px 25px #f05b5e;
}

a {
  text-decoration: none;
  color: #fff;
}

.change {
  color: #2f2f2f;
}

/*Isometric and gif Hover Effect*/

.hover-effect {
  width: 100%;
  height: 100%;
  float: left;
  overflow: hidden;
  position: relative;
  text-align: center;
}

.hover-effect .overlay {
  width: 100%;
  height: 100%;
  position: absolute;
  overflow: hidden;
  top: 0;
  left: 0;
}

.overlay {
  opacity: 0;
}

.overlay:hover {
  opacity: 100;
}

.hover-effect img {
  display: block;
  position: relative;
  transition: all 0.4s ease-in;
}

.hover-effect:hover img {
  filter: grayscale(1) blur(3px);
  transform: scale(1.2);
}

.hover-effect h2 {
  text-transform: uppercase;
  text-align: center;
  font-size: 17px;
  background: rgba(240, 91, 94, 0.5);
  color: #fff;
}

/*Motion Graphics Hover Effect*/

.hovereffect {
  width: 100%;
  height: 100%;
  float: left;
  overflow: hidden;
  position: relative;
  text-align: center;
}

.hovereffect .overlayy {
  width: 100%;
  height: 100%;
  position: absolute;
  overflow: hidden;
  top: 0;
  left: 0;
  opacity: 0;
}

.hovereffect img {
  display: block;
  position: relative;
  transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
}

.hovereffect h2 {
  text-transform: uppercase;
  color: #fff;
  text-align: center;
  font-size: 17px;
  background: rgba(141,213,225,0.6);
  transform: translatey(-100px);
  transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
}

.hovereffect:hover img {
  transform: scale(1.2);
  filter: grayscale(1) blur(3px);
}

.hovereffect:hover .overlayy {
  opacity: 1;
}

.hovereffect:hover h2,.hovereffect:hover {
  opacity: 1;
  transform: translatey(0);
}

/*Jumpstart App Hover Effect*/

.hovereffectred {
  width: 100%;
  height: 100%;
  float: left;
  overflow: hidden;
  position: relative;
  text-align: center;
}

.hovereffectred .overlayred {
  width: 100%;
  height: 100%;
  position: absolute;
  overflow: hidden;
  top: 0;
  left: 0;
  opacity: 0;
}

.hovereffectred img {
  display: block;
  position: relative;
  transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
}

.hovereffectred h2 {
  text-transform: uppercase;
  color: #fff;
  text-align: center;
  font-size: 17px;
  background: rgba(240,91,94,0.6);
  transform: translatey(-100px);
  transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
}

.hovereffectred:hover img {
  transform: scale(1.2);
  filter: grayscale(1) blur(3px);
}

.hovereffectred:hover .overlayred {
  opacity: 1;
}

.hovereffectred:hover h2,.hovereffectred:hover {
  opacity: 1;
  transform: translatey(0);
}

/*Broadcast and Lockitron Hover Effect*/

.hovereffectblue {
  width:100%;
  height:100%;
  float:left;
  overflow:hidden;
  position:relative;
  text-align:center;
}

.hovereffectblue .overlayblue {
  width:100%;
  height:100%;
  position:absolute;
  overflow:hidden;
  top:0;
  left:0;
  opacity:0;
  transition:all .4s ease-in-out
}

.hovereffectblue img {
  display:block;
  position:relative;
  transition:all .4s linear;
}

.hovereffectblue h2 {
  text-transform:uppercase;
  color:#fff;
  text-align:center;
  position:relative;
  font-size:17px;
  background:rgba(141,213,225,0.6);
  transform:translatey(-100px);
  transition:all .2s ease-in-out;
}

.hovereffectblue:hover img {
  transform:scale(1.2);
  filter: grayscale(1) blur(3px);
}

.hovereffectblue:hover .overlayblue {
  opacity:1;
}

.hovereffectblue:hover h2,.hovereffectblue:hover   a.info {
  opacity:1;
  transform:translatey(0);
}

.hovereffectblue:hover a.info {
  transition-delay:.2s;
}

.caps {
  font-family: "IBM Plex Sans", sans-serif;
}

